fix: prevent layout shift of the desktop image on firefox

--- a/src/components/FeaturedArticle/FeaturedArticle.module.css
+++ b/src/components/FeaturedArticle/FeaturedArticle.module.css
@@ -77,6 +77,10 @@
     gap: 1.875rem; /* 30px */
   }
 
+  .image {
+    height: 18.75rem; /* 300px */
+  }
+
   .name {
     margin-bottom: 0;
   }
